--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.1",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
+    "grunt-conventional-changelog": "~1.0.0"
   },
   "engines": {
     "node": ">=0.8.0"
