--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ node_js:
   - '0.8'
   - '0.10'
 before_script:
+  - 'export DISPLAY=:99.0'
+  - 'sh -e /etc/init.d/xvfb start'
+  - 'sleep 3' # give xvfb some time to start
   - 'npm install -g bower grunt-cli'
   - 'bower install'
